Fixed hero image being cropped when really small or really large

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -58,10 +58,11 @@ body {
 }
 
 .hero {
-    height: 350px;
+    min-height: 25vh;
     width: 100%;
-    margin-bottom: 25px;
+    margin: 0;
     background-image: url("../images/WebGeekBearHeader.png");
-    background-size: cover;
     background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
